<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.zancheema.android.telegram.auth.verify.VerifyCodeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/verifyCodeFragmentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.verify.VerifyCodeFragment">

        <TextView
            android:id="@+id/enterSmsCodeTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="@{@string/enter_sms_code_sent(viewmodel.phoneNumber)}"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/enter_sms_code_tools" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="@+id/enterSmsCodeTitle"
            app:layout_constraintHorizontal_bias="1.0"
            android:hint="@string/enter_6_digit_code"
            app:layout_constraintStart_toStartOf="@+id/enterSmsCodeTitle"
            app:layout_constraintTop_toBottomOf="@+id/enterSmsCodeTitle"
            android:id="@+id/editSmsCodeLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginHorizontal="16dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editSmsCode"
                android:layout_width="match_parent"
                android:inputType="number"
                android:maxLength="@integer/sms_code_max_length"
                android:textAlignment="center"
                tools:text="@string/sample_sms_code"
                android:layout_height="wrap_content"
                android:text="@={viewmodel.smsCode}"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/confirmSmsCodeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:onClick="@{() -> viewmodel.verify()}"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="@+id/editSmsCodeLayout"
            app:layout_constraintStart_toStartOf="@+id/editSmsCodeLayout"
            app:layout_constraintTop_toBottomOf="@+id/editSmsCodeLayout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>