<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewmodel"
            type="com.zancheema.android.telegram.auth.AuthViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/authConstraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".auth.AuthFragment">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/enter_phone_number_to_get_started"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/enter_phone_number_tools" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/receive_verification_code"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2"
            tools:text="@string/receive_verification_code_tools" />

        <com.hbb20.CountryCodePicker
            android:id="@+id/countryCodePicker"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:gravity="center"
            app:country_code="@={viewmodel.countryCode}"
            app:country_name="@={viewmodel.countryName}"
            app:layout_constraintBottom_toBottomOf="@+id/etPhoneNumberLayout"
            app:layout_constraintEnd_toStartOf="@+id/etPhoneNumberLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/etPhoneNumberLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etPhoneNumberLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/countryCodePicker"
            app:layout_constraintTop_toBottomOf="@+id/authCountryLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/editPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/enter_phone_number"
                android:inputType="phone"
                android:maxLength="@integer/phone_number_max_length"
                android:text="@={viewmodel.phoneNumber}"
                tools:text="@string/sample_phone_number" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/confirmPhoneNumberButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:onClick="@{() -> viewmodel.signIn()}"
            android:text="@string/next"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPhoneNumberLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/authCountryLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/authCountry"
                android:layout_width="match_parent"
                android:textStyle="bold"
                android:focusable="false"
                android:textAlignment="center"
                tools:text="@string/sample_country_name"
                android:layout_height="wrap_content"
                android:text="@{viewmodel.countryName}"/>

        </com.google.android.material.textfield.TextInputLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>