<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="250dp"
    android:background="@color/color_primary"
    android:padding="16dp">


    <TextView
        android:id="@+id/tvPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/sample_phone_number" />

    <TextView
        android:id="@+id/tvUsername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:ellipsize="end"
        android:maxLines="1"
        android:textColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/tvPhoneNumber"
        app:layout_constraintStart_toStartOf="@id/tvPhoneNumber"
        tools:text="@tools:sample/full_names" />

    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/ivProfile"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginBottom="16dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toTopOf="@id/tvUsername"
        app:layout_constraintStart_toStartOf="@id/tvUsername"
        app:srcCompat="@drawable/ic_baseline_person_24" />
</androidx.constraintlayout.widget.ConstraintLayout>